# veml-system

./: README.md
system/: CMakeLists.txt  README.md  dan  install
system/cmake_modules/: FindPackageCustom.cmake  FindgRPC.cmake
system/interface/: interface.grpc.pb.cc  interface.grpc.pb.h  interface.pb.cc  interface.pb.h  interface_pb2.py  interface_pb2_grpc.py
system/python/: analyzer_graph.py  analyzer_images.py  analyzer_inference.py  analyzer_model.py  analyzer_predict.py  analyzer_training.py  constants.py  data_manager_graph.py  data_manager_images.py  data_manager_utils.py  inferencer.py  pipeline_service.py  predict_manager_images.py  profiler.py  trainer_graph.py  trainer_images.py  version_utils.py
system/src/: CMakeLists.txt  bind.cc  wrapper.cc
system/src/common/: CMakeLists.txt  def_const.h
system/src/common/types/: CMakeLists.txt  def_const.cc  def_const.h  element_type.cc  element_type.h  eval_type.cc  eval_type.h  hash_util.h  types.cc  types.h
system/src/common/types/basic/: CMakeLists.txt  bool.h  date.cc  date.h  decimal.h  numeric.h  string.h  time.h  timestamp.h  types.cc  types.h
system/src/common/types/user_defined/: CMakeLists.txt  list.cc  list.h  list.inl  metadata.h  tuple.cc  tuple.h  types.h
system/src/concurrency/: CMakeLists.txt  mutex_lock.h  rti_thread.h  transaction.cc  transaction.h  version.cc  version.h  version_map.cc  version_map.h
system/src/persistency/: CMakeLists.txt  archive_manager.cc  archive_manager.h  log_manager.cc  log_manager.h
system/src/proto/: .gitignore  CMakeLists.txt  generate.sh  interface.proto
system/src/rti/: rti_server.cc
system/src/storage/: CMakeLists.txt  catalog.cc  catalog.h  def_const.cc  def_const.h
system/src/storage/base/: page.cc  page.h  paged_array.cc  paged_array.h  paged_array.inl  paged_array_encoded.h  paged_array_encoded.inl  paged_array_var.cc  paged_array_var.h  segment.cc  segment.h  segment_encoded.cc  segment_encoded.h  segment_encoded.inl  segment_var.cc  segment_var.h
system/src/storage/graph/: graph.cc  graph.h  graph_conv_layer.cc  graph_conv_layer.h  graph_delta.cc  graph_delta.h  graph_iterator.h  graph_main.cc  graph_main.h  graph_sparse_training.cc  graph_sparse_training.h  graph_training_data.cc  graph_training_data.h  subgraph.cc  subgraph.h
system/src/storage/relation/: column_table.cc  column_table.h  row_table.cc  row_table.h  table.cc  table.h
system/src/storage/util/: bit_vector.cc  bit_vector.h  btree.h  btree.inl  btree_index.h  data_transfer.cc  data_transfer.h  neural_ops.h  page_allocator.cc  page_allocator.h  partition_func.cc  partition_func.h  py_dataloader.h  segment_map.cc  segment_map.h  util_func.cc  util_func.h  version_hash_map.h
system/src/storage/util/deprecated/: deserialize_graph_distribute.cc  deserialize_graph_distribute.h  graph_distribute_base.h  graph_training.cc  graph_training.h  grpc_graph_distribute.cc  grpc_graph_distribute.h  serialize_graph_partition.cc  serialize_graph_partition.h  serialize_grpcgraph_distribute.cc  serialize_grpcgraph_distribute.h
system/src/util/: CMakeLists.txt  buffer.cc  buffer.h  graph_gen.cc  graph_gen.h  result_checker.cc  result_checker.h  timer.h  vtune_helper.h  zipf.h
